--- a/speech_exploration.ipynb
+++ b/speech_exploration.ipynb
@@ -182,12 +182,16 @@
    "outputs": [],
    "source": [
     "# Tokenize sentences into words\n",
-    "words = word_tokenize(all_speeches_content)\n",
-    "\n",
-    "# cleaned_words = []\n",
-    "# for word in words:\n",
-    "#     if word not in stop_words and word.isalpha():\n",
-    "#         cleaned_words.append(word.lower())"
+    "words = word_tokenize(all_speeches_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: check why stopwords are still there"
    ]
   },
   {
